feat(task): add EditTaskActivity for updating existing tasks
- Implement EditTaskActivity with validation and update feature
- Reuse add_task layout, change Save → Update
- Load task by id from Room DB and save changes
- Register EditTaskActivity in AndroidManifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".ui.EditTaskActivity"
+            android:exported="false"/>
+
     </application>
 
 </manifest>
