Initial commit - Simple ToDo App (Data Handling & Local Storage)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,26 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    package="com.example.todoapp">
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="ToDoApp"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ToDoApp"
-        tools:targetApi="31">
+        android:theme="@style/Theme.ToDoApp">
 
-        <!-- AddTaskActivity ( add new task) -->
+        <!-- Màn hình khởi động -->
         <activity
-            android:name=".ui.AddTaskActivity"
-            android:exported="false" />
-
-        <!-- MainActivity -->
-        <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,9 +18,16 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.EditTaskActivity"
-            android:exported="false"/>
+        <!-- Các Activity còn lại -->
+        <activity android:name=".ui.RegisterActivity" android:exported="false" />
+        <activity android:name=".ui.MainActivity" android:exported="false" />
+        <activity android:name=".ui.AddTaskActivity" android:exported="false" />
+        <activity android:name=".ui.EditTaskActivity" android:exported="false" />
+        <activity android:name=".ui.AdminActivity" android:exported="false" />
+        <activity android:name=".ui.TaskDetailActivity" android:exported="false" />
 
     </application>
+
+
 
 </manifest>
